SAK-23907 ETS assembly removed and POM cleanup
git-svn-id: https://source.sakaiproject.org/svn/emailtemplateservice/trunk@129499 66ffb92e-73f9-0310-93c1-f5514f145a0a